"Affect Alpha" in Texture Paint mode doesn't work as expected #67665

Closed
opened 2019-07-25 14:56:19 +02:00 by gobb_blend · 4 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-24 12:32, hash: bfe580642f

Short description of error
When in Texture Paint mode, brush strokes of the smear or soften brush still affect the alpha channel of the texture that is being painted on, even when "Affect alpha" is unchecked in the active tool tab.

Exact steps for others to reproduce the error
Create a texture with transparent areas. Go to texture paint mode to either paint in the image editor or on a mesh. Use the smear brush or soften brush with "Affect Alpha" disabled.
The texture's alpha channel is still affected by the brush strokes.
Example file:
alpha_smear.blend

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-24 12:32, hash: `bfe580642f` **Short description of error** When in Texture Paint mode, brush strokes of the smear or soften brush still affect the alpha channel of the texture that is being painted on, even when "Affect alpha" is unchecked in the active tool tab. **Exact steps for others to reproduce the error** Create a texture with transparent areas. Go to texture paint mode to either paint in the image editor or on a mesh. Use the smear brush or soften brush with "Affect Alpha" disabled. The texture's alpha channel is still affected by the brush strokes. Example file: [alpha_smear.blend](https://archive.blender.org/developer/F7628192/alpha_smear.blend)
Author

Added subscriber: @gobb_blend

Added subscriber: @gobb_blend
Sebastian Parborg self-assigned this 2019-08-05 17:33:09 +02:00

I've posted a fix: D5416

I've posted a fix: [D5416](https://archive.blender.org/developer/D5416)

This issue was referenced by 0c4ee9e13d

This issue was referenced by 0c4ee9e13d489f40159596db9026e17e6404ea3c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67665
No description provided.