Fix T67665 "Affect Alpha" in Texture Paint mode doesn't work as expected

The "alpha lock" check was missing for the smear and soften brush.
Added checks to make sure that the alpha values are kept the same.

Reviewed By: Brecht

Differential Revision: http://developer.blender.org/D5416